Polling interval field CSS update Fixed unit test Squashing.
Closes COUCHDB-2371

--- a/app/addons/activetasks/assets/less/activetasks.less
+++ b/app/addons/activetasks/assets/less/activetasks.less
@@ -44,3 +44,21 @@
     width: 23%;
   }
 }
+
+.sidebar .polling-interval {
+  li.nav-header {
+    padding: 9px 0px 0px 9px;
+  }
+  li {
+    padding: 0px 15px 3px 9px;
+    margin-left: 0px;
+
+    input {
+      width: 100%;
+    }
+
+    label span {
+      font-weight: bold;
+    }
+  }
+}
